--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,16 @@
 [server]
-maxMessageSize = 300
+maxMessageSize = 1000
+enableCORS = false
+enableXsrfProtection = false
+
+[runner]
+magicEnabled = false
+
+[theme]
+primaryColor = "#1c83e1"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f0f2f6"
+textColor = "#262730"
 
 [deprecation]
 showPyplotGlobalUse = false
